Implemented register API

--- a/Stealth777/Modules/SIGN UP/View/EnterPasswordStoryboard.storyboard
+++ b/Stealth777/Modules/SIGN UP/View/EnterPasswordStoryboard.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -46,13 +47,17 @@
                                         <color key="tintColor" name="SecondaryThemeColor"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" image="eye.slash" catalog="system"/>
+                                        <state key="disabled" image="eye" catalog="system"/>
+                                        <state key="selected">
+                                            <imageReference key="image" image="eye.slash" catalog="system" renderingMode="original"/>
+                                        </state>
                                     </button>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mtD-lE-chP" customClass="UITextFieldCustomClass" customModule="Stealth777" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="333" height="46"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <color key="textColor" name="textFieldColor"/>
                                         <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="color" keyPath="placeholderColor">
                                                 <color key="value" name="textFieldPlaceholderColor"/>
@@ -61,6 +66,9 @@
                                                 <real key="value" value="5"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <outlet property="delegate" destination="cP3-Rg-FS5" id="sH9-bL-VUF"/>
+                                        </connections>
                                     </textField>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -90,8 +98,8 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Confirm password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Qrr-G9-IAp" customClass="UITextFieldCustomClass" customModule="Stealth777" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="2" width="335" height="44"/>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Confirm Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Qrr-G9-IAp" customClass="UITextFieldCustomClass" customModule="Stealth777" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="2" width="348" height="44"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <color key="textColor" name="textFieldColor"/>
                                         <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
@@ -104,27 +112,28 @@
                                                 <real key="value" value="5"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <outlet property="delegate" destination="cP3-Rg-FS5" id="d4K-Zs-EUO"/>
+                                        </connections>
                                     </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r3c-TD-4hO">
-                                        <rect key="frame" x="335" y="0.0" width="35" height="46"/>
+                                    <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tickIcon" translatesAutoresizingMaskIntoConstraints="NO" id="sEh-eD-aRU">
+                                        <rect key="frame" x="348" y="0.0" width="20" height="46.333333333333336"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="35" id="hAD-K5-t5S"/>
+                                            <constraint firstAttribute="width" constant="20" id="sql-9X-ZaX"/>
                                         </constraints>
-                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                        <state key="normal" image="usernameAvailableIcon"/>
-                                    </button>
+                                    </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="r3c-TD-4hO" secondAttribute="trailing" constant="-2" id="0aX-7H-bHE"/>
                                     <constraint firstItem="Acx-zJ-Ndn" firstAttribute="top" secondItem="Qrr-G9-IAp" secondAttribute="bottom" id="4aO-XJ-SLs"/>
+                                    <constraint firstItem="sEh-eD-aRU" firstAttribute="top" secondItem="TKj-U5-ypM" secondAttribute="top" id="5Mz-Jq-Mwv"/>
                                     <constraint firstAttribute="trailing" secondItem="Acx-zJ-Ndn" secondAttribute="trailing" id="9Nx-3w-6mA"/>
-                                    <constraint firstItem="r3c-TD-4hO" firstAttribute="top" secondItem="TKj-U5-ypM" secondAttribute="top" id="KhV-eX-MjA"/>
                                     <constraint firstItem="Acx-zJ-Ndn" firstAttribute="leading" secondItem="TKj-U5-ypM" secondAttribute="leading" id="Klc-eh-fs0"/>
+                                    <constraint firstAttribute="trailing" secondItem="sEh-eD-aRU" secondAttribute="trailing" id="TrE-Ff-br1"/>
                                     <constraint firstItem="Qrr-G9-IAp" firstAttribute="leading" secondItem="TKj-U5-ypM" secondAttribute="leading" id="VjR-MC-0RA"/>
-                                    <constraint firstItem="Acx-zJ-Ndn" firstAttribute="top" secondItem="r3c-TD-4hO" secondAttribute="bottom" id="cpR-mI-ncd"/>
-                                    <constraint firstItem="r3c-TD-4hO" firstAttribute="leading" secondItem="Qrr-G9-IAp" secondAttribute="trailing" id="i62-2E-bgm"/>
+                                    <constraint firstAttribute="bottom" secondItem="sEh-eD-aRU" secondAttribute="bottom" id="egD-W8-axl"/>
                                     <constraint firstItem="Qrr-G9-IAp" firstAttribute="top" secondItem="TKj-U5-ypM" secondAttribute="top" constant="2" id="iFu-fj-Om9"/>
+                                    <constraint firstItem="sEh-eD-aRU" firstAttribute="leading" secondItem="Qrr-G9-IAp" secondAttribute="trailing" id="iNl-rk-PUX"/>
                                     <constraint firstAttribute="bottom" secondItem="Acx-zJ-Ndn" secondAttribute="bottom" id="tI8-H6-Xkr"/>
                                 </constraints>
                             </view>
@@ -190,6 +199,12 @@
                             <userDefinedRuntimeAttribute type="boolean" keyPath="diagonalMode" value="YES"/>
                         </userDefinedRuntimeAttributes>
                     </view>
+                    <connections>
+                        <outlet property="confirmPasswordTxtField" destination="Qrr-G9-IAp" id="ego-Fx-MBd"/>
+                        <outlet property="enterPasswordTxtField" destination="mtD-lE-chP" id="D0G-15-sky"/>
+                        <outlet property="passwordStrengthLbl" destination="8Es-aP-kdv" id="mY6-yE-Ik8"/>
+                        <outlet property="validPasswordImgView" destination="sEh-eD-aRU" id="ZAS-2H-a3y"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Gck-cV-gYk" sceneMemberID="firstResponder"/>
             </objects>
@@ -207,15 +222,16 @@
             <size key="intrinsicContentSize" width="126.66666666666667" height="17.666666666666668"/>
         </designable>
         <designable name="Qrr-G9-IAp">
-            <size key="intrinsicContentSize" width="148.66666666666666" height="20"/>
+            <size key="intrinsicContentSize" width="149.66666666666666" height="20"/>
         </designable>
         <designable name="mtD-lE-chP">
-            <size key="intrinsicContentSize" width="129" height="21.666666666666668"/>
+            <size key="intrinsicContentSize" width="129" height="20"/>
         </designable>
     </designables>
     <resources>
+        <image name="eye" catalog="system" width="128" height="81"/>
         <image name="eye.slash" catalog="system" width="128" height="86"/>
-        <image name="usernameAvailableIcon" width="18" height="14"/>
+        <image name="tickIcon" width="14" height="11.333333015441895"/>
         <namedColor name="PrimaryThemeColor">
             <color red="0.0" green="0.3529999852180481" blue="0.62000000476837158" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
