--- a/Stealth777/Modules/LOGIN/View/LoginStoryboard.storyboard
+++ b/Stealth777/Modules/LOGIN/View/LoginStoryboard.storyboard
@@ -226,7 +226,7 @@
             <size key="intrinsicContentSize" width="132" height="31"/>
         </designable>
         <designable name="rzC-qe-I6R">
-            <size key="intrinsicContentSize" width="111.66666666666667" height="20.666666666666668"/>
+            <size key="intrinsicContentSize" width="132" height="20.666666666666668"/>
         </designable>
         <designable name="tE8-cb-Ehd">
             <size key="intrinsicContentSize" width="359" height="345"/>
