--- a/Stealth777/Modules/SIGN UP/View/CreateWalletStoryboard.storyboard
+++ b/Stealth777/Modules/SIGN UP/View/CreateWalletStoryboard.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="dark"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
@@ -112,9 +112,12 @@
                                 <rect key="frame" x="147" y="570" width="120" height="40"/>
                                 <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="15"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" title="   Copy " image="copyIcon" backgroundImage="copyPhraseBg">
+                                <state key="normal" title="   Copy " image="copyicon" backgroundImage="copyPhraseBg">
                                     <color key="titleColor" name="SecondaryThemeColor"/>
                                 </state>
+                                <connections>
+                                    <action selector="copyBtnAction:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="CGO-5o-FbB"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
@@ -172,8 +175,8 @@
         </designable>
     </designables>
     <resources>
-        <image name="copyIcon" width="17.5" height="17.5"/>
         <image name="copyPhraseBg" width="120" height="40"/>
+        <image name="copyicon" width="17.5" height="17.5"/>
         <namedColor name="CustomViewBgColor">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
